--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+SpringBootProject/HELP.md
+SpringBootProject/target/
+SpringBootProject/!.mvn/wrapper/maven-wrapper.jar
+SpringBootProject/!**/src/main/**/target/
+SpringBootProject/!**/src/test/**/target/
 
 ### STS ###
 .apt_generated
@@ -14,20 +14,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
-.vscode/
+SpringBootProject/.idea
+SpringBootProject/*.iws
+SpringBootProject/*.iml
+SpringBootProject/*.ipr
