--- a/SpringBootProject/src/main/resources/application.properties
+++ b/SpringBootProject/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# create and drop tables and sequences, loads import.sql
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
+# Oracle settings
+spring.datasource.url=jdbc:oracle:thin:@im2ag-oracle.e.ujf-grenoble.fr:1521:IM2AG
+spring.datasource.username=nasyrovt
+spring.datasource.password=93fe2d98d6
+spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
 
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=debug
