--- a/spring-boot-db-project/pom.xml
+++ b/spring-boot-db-project/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.10</version>
+		<version>2.6.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>accessing-data-jpa</artifactId>
+	<groupId>nasyrov-takhir</groupId>
+	<artifactId>spring-boot-db-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>accessing-data-jpa</name>
-	<description>Demo project for Spring Boot</description>
+	<name>spring-boot-db-project</name>
+	<description>BD-SI project on Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
 	</properties>
@@ -46,15 +46,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>javax.xml.bind</groupId>
-			<artifactId>jaxb-api</artifactId>
-			<version>2.3.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -62,6 +53,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
